push bai tap ngay 9/11/2021

--- a/ss9-code-cấu-truc-dieu-kien2/Bai-tap/Bai-tap-cau-lenh-swidch-case-tinh-so-ngay.html
+++ b/ss9-code-cấu-truc-dieu-kien2/Bai-tap/Bai-tap-cau-lenh-swidch-case-tinh-so-ngay.html
@@ -5,21 +5,19 @@
     <title>Title</title>
 </head>
 <body>
-<form>
     <table>
         <tr>
             <td>
-                <input type="text" id="month">
+                <label><input type="text" id="month"></label>
             </td>
             <td>
-<button onclick="day">Tính số ngày</button>
+<button onclick="day()">Tính số ngày</button>
             </td>
         </tr>
     </table>
-</form>
 <script>
     function day() {
-let numberday = document.getElementById('month');
+let numberday = parseInt(document.getElementById('month').value);
 switch (numberday) {
     case 1:
     case 3:
