--- a/ss9-code-cấu-truc-dieu-kien2/Thuc-hanh/thuc-hanh-su-kien-chuot.html
+++ b/ss9-code-cấu-truc-dieu-kien2/Thuc-hanh/thuc-hanh-su-kien-chuot.html
@@ -6,9 +6,9 @@
 </head>
 <body>
 <form>
-    <img id="myImage" src="This PC/pictures/images/ball.jpg">
+    <img id="myImage" src="https://thuviendohoa.vn/png/452-hinh-anh-trai-bong-da-png.html">
     <p>Click button below to move the image to right</p>
-    <input type="button" value="Click Me" />
+    <input type="button" value="Click Me"/>
 </form>
 <script>
     let imgObj = null;
