--- a/ss10-code-cấu-trúc-vòng-lặp-1/Thuc-hanh/nháp.html
+++ b/ss10-code-cấu-trúc-vòng-lặp-1/Thuc-hanh/nháp.html
@@ -6,11 +6,21 @@
 </head>
 <body>
 <script>
-    function factorial(n){
-        if ((n == 0) || (n == 1))
-            return 1;
-        else
-            return (n * factorial(n - 1));
+
+    for (let i=0;i<=6;i++){
+        for (let j = 0;j<=20;j++){
+           if (i == 0 || i == 6){
+             document.write("<a style='color: black'>*<a>")
+            }
+           else{
+               if (j == 0 || j == 20) {
+                   document.write("<a style='color: black'>*<a>")
+               }else {
+                   document.write("<a style='color: white'>*<a>")
+               }
+           }
+        }
+        document.write("<br>")
     }
 </script>
 </body>
