--- a/ss12-code-mang/Thuc-hanh/Th-dao-nguoc-cac-phan-tu-trong-mang.html
+++ b/ss12-code-mang/Thuc-hanh/Th-dao-nguoc-cac-phan-tu-trong-mang.html
@@ -6,17 +6,17 @@
 </head>
 <body>
 <script>
-    var arr = [1,3,12,4,6,9];
-    arr.insert(2,30);
-/*rray.splice(startIndex, deleteCount, items).
-startIndex: Vị trí bắt đầu để thay đổi mảng.
-deleteCount: tổng số phần tử muốn xóa.
-items: phần tử thêm vào mảng.
-
-var arr = [1,3,12,4,6,9];
-arr.insert(2, 30);
-*/
-
+    let x = [-3, 5, 1, 3, 2, 10];
+    let first = 0;
+    let last = x.length - 1;
+    while (first < last) {
+        let b = x[first];
+        x[first] = x[last];
+        x[last] = b;
+        first++;
+        last--;
+    }
+    document.write(x);
 </script>
 </body>
 </html>
