Push bài tập bài 12 và 13

--- a/ss10-code-cấu-trúc-vòng-lặp-1/Thuc-hanh/nháp.html
+++ b/ss10-code-cấu-trúc-vòng-lặp-1/Thuc-hanh/nháp.html
@@ -6,22 +6,35 @@
 </head>
 <body>
 <script>
+//let a = [1,4,8,20,50,100,70,112];
+//a = a.splice(3,0,19,25,79);
+//console.log(a);
 
-    for (let i=0;i<=6;i++){
-        for (let j = 0;j<=20;j++){
-           if (i == 0 || i == 6){
-             document.write("<a style='color: black'>*<a>")
-            }
-           else{
-               if (j == 0 || j == 20) {
-                   document.write("<a style='color: black'>*<a>")
-               }else {
-                   document.write("<a style='color: white'>*<a>")
-               }
-           }
-        }
-        document.write("<br>")
-    }
+
+
+
+//let a = [];
+//let n = parseInt(prompt('Nhập số lượng phần tử: '));
+//for (i = 0; i < n; i++) {
+   // a[i] = parseInt(prompt("Nhap phan tu " + i));
+//}
+
+  // for (i=0; i<n; i++) {
+      // let m = parseInt(prompt('Nhập phần tử cần chèn vào mảng a: '));
+       //let index = parseInt(prompt('Nhập vị trí muốn chèn vào mảng: '));
+     //  if (j == 0 || j == (n - 1)) {
+       //    alert(" Vị trí này không thể chèn vào ");
+        //   j = parseInt(prompt('Nhập lại vị trí muốn chèn vào mảng: '));
+        //   m = parseInt(prompt("Nhap phan tu can chen lai vao:  "));
+     //  } else  if (j == (i+2)) {
+      //     a.splice(a[i+ 2], 0, m);
+        //   }else {
+       //    console.log(a);
+     //  }
+     // console.log(a);
+  //}
+
+var a= numbers.in
 </script>
 </body>
 </html>
