push bài tập ngày 16/11

--- a/ss15-code-ham-2/Bai-tap/Bai-tap-ham-01.5.html
+++ b/ss15-code-ham-2/Bai-tap/Bai-tap-ham-01.5.html
@@ -18,14 +18,13 @@
     }
 
 
-        let timsao = prompt("Nhập tên ngôi sao")
-        let sao = ngoiSao(timsao)
-        if(sao == ""){
-            document.write("Không có tên ngôi sao nào")
-        }else {
-            document.write("Tên chòm saocủa "+timsao+" là "+sao)
-        }
-
+    let timsao = prompt("Nhập tên ngôi sao")
+    let sao = ngoiSao(timsao)
+    if(sao == ""){
+        document.write("Không có tên ngôi sao nào")
+    }else {
+        document.write("Tên chòm sao tương ứng của "+timsao+" là "+sao)
+    }
 </script>
 </body>
 </html>
